--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.5.2</version>
         </dependency>
-        <!--swagger的相关配置-->
+        <!--swagger3的依赖-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
@@ -62,6 +62,15 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <!-- 在构建路径中 指定源文件编译的字符编码 -->
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
