--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>${swagger.version}</version>
         </dependency>
+        <!--easyPoi的依赖引入-->
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-spring-boot-starter</artifactId>
+            <version>4.4.0</version>
+        </dependency>
         <!--监控器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
